feat: Rename heart feature to like, update related state management and localization for improved clarity and user experience

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -103,7 +103,9 @@
     "share": "Sdílet",
     "copyLink": "Kopírovat odkaz",
     "copied": "Zkopírováno!",
-    "like": "Jiskra",
+    "spark": "Zážeh",
+    "sparks": "Zážehů",
+    "lightItUp": "Rozžehni to",
     "returnToPlayer": "Zpět k přehrávači",
     "closePlayer": "Zavřít přehrávač"
   },
