feat: Implement trending recordings feature with like count integration and update UI components for improved user engagement

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -43,8 +43,8 @@
       }
     },
     "recordings": {
-      "title": "Archiv záznamů",
-      "subtitle": "Nestihl jsi meetup? Nevadí, pusť si záznamy z proběhlých akcí.",
+      "title": "Populární záznamy",
+      "subtitle": "Nejoblíbenější přednášky z naší komunity.",
       "viewAll": "Všechny záznamy",
       "empty": "Z téhle lokace tu zatím nic není.",
       "filter": {
