refactor: Update header buttons.

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -1,9 +1,8 @@
 {
   "header": {
     "home": "Dom\u016f",
-    "events": "Akce",
+    "upcoming": "Nadch\u00e1zej\u00edc\u00ed",
     "library": "Knihovna",
-    "locations": "Lokace",
     "crew": "Crew",
     "back": "Zp\u011bt",
     "logoAlt": "Logo Bonfire Events"
