refactor: Update recordings and photo albums components for improved data handling and UI consistency

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -199,7 +199,7 @@
   "photos": {
     "eyebrow": "Fotoalba",
     "title": "Byli jsme tam",
-    "subtitle": "Vizuální archiv meetupů, přednášek a komunitních momentů Bonfire.",
+    "subtitle": "Fotografická kronika Bonfire meetupů, přednášek a komunitních momentů.",
     "featuredTitle": "Výběr fotek",
     "featuredSubtitle": "Náhodná ochutnávka napříč alby.",
     "stats": {
