--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -199,7 +199,7 @@
   "photos": {
     "eyebrow": "Photo Albums",
     "title": "We Were There",
-    "subtitle": "A visual archive of Bonfire meetups, talks, and community moments.",
+    "subtitle": "A photo chronicle of Bonfire meetups, talks, and community moments.",
     "featuredTitle": "Featured Shots",
     "featuredSubtitle": "A rotating selection from across the albums.",
     "stats": {
