feat: Update photo album data structure with new cover images and photographer details, enhance type definitions for better type safety in related components

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -215,6 +215,7 @@
     "albumsTitle": "Všechna alba",
     "albumsSubtitle": "Procházejte kompletní archiv podle epizod.",
     "albumPhotos": "{count} fotek",
+    "photographersBy": "Fotografie:",
     "viewAlbum": "Otevřít album",
     "download": "Stáhnout",
     "backToAlbums": "Zpět na alba",
