--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -215,6 +215,7 @@
     "albumsTitle": "All Albums",
     "albumsSubtitle": "Browse the full archive by episode.",
     "albumPhotos": "{count} photos",
+    "photographersBy": "Photographs by",
     "viewAlbum": "View album",
     "download": "Download",
     "backToAlbums": "Back to albums",
