feat: Implement enhanced error logging and rate limiting in API routes, improve security headers in configuration, and refactor database interactions for better error handling

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -691,7 +691,7 @@
       "subject": "Váš přihlašovací kód {{brandName}}",
       "title": "Přihlášení do Bonfire",
       "subtitle": "Použijte kód níže pro dokončení přihlášení.",
-      "codeLabel": "Váš přihlašovací kód je {{code}}.",
+      "codeLabel": "Váš přihlašovací kód:",
       "expires": "Kód vyprší za {{ttl}}.",
       "ignore": "Pokud jste o e-mail nežádali, můžete ho ignorovat.",
       "securityTip": "Tento kód nikdy nesdílejte. {{brandName}} vás o něj nikdy nepožádá telefonicky, chatem ani na sociálních sítích.",
@@ -702,7 +702,7 @@
       "subject": "Důležité: Potvrzení smazání účtu {{brandName}}",
       "title": "Důležité: Smazání účtu",
       "subtitle": "Použijte kód níže k trvalému smazání účtu {{brandName}}.",
-      "codeLabel": "Váš kód pro smazání je {{code}}.",
+      "codeLabel": "Váš kód pro smazání:",
       "expires": "Kód vyprší za {{ttl}}.",
       "ignore": "Máte-li dotazy nebo potřebujete pomoc, kontaktujte nás na hello@bnf.events",
       "securityTip": "Tento kód zadejte pouze pokud jste požádali o smazání účtu. Tuto akci nelze vrátit zpět.",
@@ -811,9 +811,16 @@
       "outcomes": {
         "success": "Úspěšné přihlášení",
         "expired": "Kód vypršel",
+        "max_attempts": "Příliš mnoho pokusů",
         "maxAttempts": "Příliš mnoho pokusů",
+        "mismatch": "Neplatný kód",
         "invalidCode": "Neplatný kód",
+        "rate_limited": "Omezeno limitem",
         "rateLimited": "Omezeno limitem",
+        "too_many_attempts": "Příliš mnoho pokusů",
+        "missing": "Výzva nenalezena",
+        "used": "Kód již použit",
+        "user_failed": "Vytvoření uživatele selhalo",
         "error": "Chyba přihlášení"
       }
     },
