--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -691,7 +691,7 @@
       "subject": "Your {{brandName}} verification code",
       "title": "Verify your email",
       "subtitle": "Enter this code to complete your sign-in to {{brandName}}.",
-      "codeLabel": "Your verification code is {{code}}.",
+      "codeLabel": "Your verification code:",
       "expires": "This code expires in {{ttl}}.",
       "ignore": "If you didn't request this code, you can safely ignore this email.",
       "securityTip": "Never share this code. {{brandName}} will never ask for it via phone, chat, or social media.",
@@ -702,7 +702,7 @@
       "subject": "Important: Confirm your {{brandName}} account deletion",
       "title": "Important: Delete your account",
       "subtitle": "Enter this code to permanently delete your {{brandName}} account and all associated data.",
-      "codeLabel": "Your deletion code is {{code}}.",
+      "codeLabel": "Your deletion code:",
       "expires": "This code expires in {{ttl}}.",
       "ignore": "If you have questions or need help, contact us at hello@bnf.events",
       "securityTip": "Only enter this code if you requested account deletion. This action cannot be undone.",
@@ -811,9 +811,16 @@
       "outcomes": {
         "success": "Successful login",
         "expired": "Code expired",
+        "max_attempts": "Too many attempts",
         "maxAttempts": "Too many attempts",
+        "mismatch": "Invalid code",
         "invalidCode": "Invalid code",
+        "rate_limited": "Rate limited",
         "rateLimited": "Rate limited",
+        "too_many_attempts": "Too many attempts",
+        "missing": "Challenge not found",
+        "used": "Code already used",
+        "user_failed": "User creation failed",
         "error": "Login error"
       }
     },
