refactor: Enhance GridFiltersBar and RecordingsCatalog components with improved state management and search handling, and update localization files to include 'no recordings found' messages

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -130,7 +130,8 @@
     "boosts": "Boosty",
     "boostItUp": "Přidat boost",
     "returnToPlayer": "Zpět k přehrávači",
-    "closePlayer": "Zavřít přehrávač"
+    "closePlayer": "Zavřít přehrávač",
+    "empty": "Žádné záznamy nenalezeny."
   },
   "press": {
     "eyebrow": "Média",
